# e-commerce-admin

backend/auth/: db.sqlite3  pyproject.toml
backend/auth/auth/: settings.py
backend/auth/users/: models.py  serializers.py  urls.py  views.py
backend/auth/users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_user_is_admin.py  0004_alter_user_is_admin.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: FeedRoutes.jsx  Header.jsx  Product.jsx
frontend/src/data/: dummyOrders.js  productsData.js
frontend/src/images/: index.js
frontend/src/pages/: Cart.jsx  Checkout.jsx  Feed.jsx  Home.jsx  Login.jsx  OrderDetail.jsx  Orders.jsx  ProductDetail.jsx  Register.jsx  index.js
frontend/src/store/: auth-context.js  cart-context.js
